set01/problem01_compile_errors.txt
c:\Users\adity\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Adi5424k\set01\problem01.c: In function 'main':
c:\Users\adity\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Adi5424k\set01\problem01.c:7:5: error: expected ';' before 'return'
     return 0;
     ^~~~~~
